--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "critters": "^0.0.23",
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
     "ogl": "^1.0.11",
