--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-spring/web": "^9.7.5",
     "critters": "^0.0.23",
     "framer-motion": "^12.4.10",
-    "next": "15.2.1",
+    "next": "^14.2.24",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
