--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "three": "^0.174.0",
     "typewriter-effect": "^2.21.0"
