--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.21.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
+    "eslint": "^9.21.0",
     "eslint-config-next": "15.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.5"
   }
